# bearboto3

./: .gitignore  Dockerfile  Dockerfile.base  LICENSE  README.md  contributing.md  docker-build.sh  example.py  pyproject.toml  readme.md  services.md  types.py
.github/actions/setup_env/: action.yml
.github/workflows/: build.yml  docker.yml  integration.yml  pull-request.yml  pull_request.yml  release.yml  scratch.yml  test.yml
bearboto3/: __init__.py  dynamodb.py  ec2.py  iam.py  lambda_.py  s3.py  sns.py  sqs.py
integration/: pyproject.toml
templates/: annotations.py.j2  fixtures.py.j2  tests.py.j2
test/: conftest.py  test_s3.py  utils.py
tests/: conftest.py  template.py
tests/dynamodb/: dynamodb_fixtures.py  test_dynamodb_clients.py  test_dynamodb_collections.py  test_dynamodb_paginators.py  test_dynamodb_resources.py  test_dynamodb_waiters.py
tests/ec2/: ec2_fixtures.py  test_ec2_clients.py  test_ec2_collections.py  test_ec2_paginators.py  test_ec2_resources.py  test_ec2_waiters.py
tests/iam/: iam_fixtures.py  test_iam_clients.py  test_iam_collections.py  test_iam_paginators.py  test_iam_resources.py  test_iam_waiters.py
tests/integration/: bearboto3.whl  integration.py  pyproject.toml
tests/lambda_/: lambda_fixtures.py  test_lambda_clients.py  test_lambda_paginators.py  test_lambda_waiters.py
tests/s3/: s3_fixtures.py  test_s3.py  test_s3_bucket.py  test_s3_clients.py  test_s3_collections.py  test_s3_object.py  test_s3_paginators.py  test_s3_resources.py  test_s3_waiters.py
tests/sns/: sns_fixtures.py  test_sns_clients.py  test_sns_collections.py  test_sns_paginators.py  test_sns_resources.py
tests/sqs/: sqs_fixtures.py  test_sqs_clients.py  test_sqs_collections.py  test_sqs_paginators.py  test_sqs_resources.py
tools/: annotate_classes.py  create_fixtures.py  create_tests.py  map_classes.py
