[tool.poetry]
name = "bearboto3-integration"
version = "0.1.0"
description = "Bearboto3 integration project"
authors = ["Paul <dev@studiop.page>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.21.37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
