[tool.poetry]
name = "bearboto3-integration"
version = "0.1.0"
description = "Bearboto3 integration tests"
authors = ["Paul <dev@studiop.page>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.20.42"
beartype = "^0.9.1"
bearboto3 = {file = "bearboto3.whl"}

[tool.poetry.dev-dependencies]
boto3-stubs = {extras = ["all"], version = "^1.20.42"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
