[tool.poetry]
name = "bearboto3-integration"
version = "0.1.1"
description = "Bearboto3 integration tests"
authors = ["Paul <dev@studiop.page>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.20.42"
beartype = "^0.10.2"
bearboto3 = {path = "bearboto3.whl"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
